<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/previous"
        android:enabled="true"
        android:icon="@drawable/baseline_arrow_back_24"
        android:title="@string/previous" />
    <item
        android:id="@+id/next"
        android:enabled="true"
        android:icon="@drawable/baseline_arrow_forward_24"
        android:title="@string/next" />
</menu>