<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredient_list"
    android:name="com.samdunkley.android.bakingapp.view.RecipeIngredientsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/ingredients_margin"
    android:layout_marginRight="@dimen/ingredients_margin"
    app:layoutManager="LinearLayoutManager"
    tools:context=".view.fragments.RecipeIngredientsFragment"
    tools:listitem="@layout/recipe_ingredients_list_content" />