<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.RecipeStepFragment">

    <LinearLayout
        android:layout_width="match_parent"
...
