<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pref_show_in_widget"
            android:checkable="true"
            android:icon="@drawable/baseline_star_outline_24"
            android:title="@string/show_in_widget"
            app:showAsAction="always" />
    </group>
</menu>